--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,13 @@
 {
+  "ConnectionStrings": {
+    "RedisConnection": "localhost:6379"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
 }
